# PhenoKits

./: .argis-persistent-queue.md  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSOLIDATED_DOMAIN_MAP.md  Cargo.toml  README.md  RELEASE.md  RESEARCH_COMPLETE.md  SOTA_RESEARCH_POLYINFRA.md  STASHLY_MIGRATIONS_ADOPTION_REPORT.md  entity.go  go.mod  issue_pr_triage_2026_04_25.md  package.json  phenoForge.md  phenotype-collections.toml  phenotype-versions.toml  pyproject.toml  release-registry.toml  worklog.md
.worktrees/Apisync-docs/: ADR.md  AGENTS.md  CLAUDE.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SPEC.md  TEST_COVERAGE_MATRIX.md  clippy.toml  sentry_config.rs
.worktrees/Apisync-docs/benches/: api.rs
.worktrees/Apisync-docs/docs/: index.md
.worktrees/Apisync-docs/src/: lib.rs
.worktrees/Authvault-docs/: CONTRIBUTING.md  Cargo.toml  README.md
.worktrees/Authvault-docs/.github/: dependabot.yml
.worktrees/BytePort-docs/: .env.example  .health-dashboard.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PHASE_2_COMPLETE.md  PLAN.md  PRD.md  QUICKSTART.md  README.md  REARCHITECTURE.md  REFACTORING_SUMMARY.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  _typos.toml  clippy.toml  crt.pem  package-lock.json
.worktrees/BytePort-docs/.agileplus/: worklog.md
.worktrees/BytePort-docs/.history/: start_20241124115755  start_20241124115939  start_20241124115953  start_20241124120030  start_20241124120130  start_20241124120143  start_20241124120149  start_20241124120353  start_20241124120355  start_20241124120432  start_20241124120449  start_20241124120452  start_20241124120457  start_20241124120458  start_20241126200731  start_20241126200826  start_20241126200928  start_20241126200936  start_20241126201116
.worktrees/BytePort-docs/backend/: auth_handlers.go  auth_handlers_workos.go  auth_handlers_workos_test.go  auth_integration_test.go  deployment_handlers_test.go  go.mod  go.sum  handlers.go  handlers_helpers_test.go  handlers_test.go  handlers_test_helper_integration.go  handlers_test_helper_unit.go  main_test.go  models_providers_test.go  models_test.go  openapi.yaml  secrets.cover
.worktrees/BytePort-docs/frontend/: COMPONENTS_REFERENCE.md  middleware.ts  (+5 more)
.worktrees/HexaPy-docs/: .env.example  .pre-commit-config.yaml  ADR.md  AGENTS.md  CHANGELOG.md  Dockerfile  FUNCTIONAL_REQUIREMENTS.md  PRD.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  Taskfile.yml  process-compose.yml  pyproject.toml
.worktrees/Logify-docs/: .env.example  .health-dashboard.yml  CLAUDE.md  Cargo.toml  SECURITY.md  clippy.toml  pyproject.toml
.worktrees/Metron-docs/: .env.example  .health-dashboard.yml  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  clippy.toml  cobertura.xml  pyproject.toml
.worktrees/Portalis-docs/: .coveragerc  .env.example  .health-dashboard.yml  AGENTS.md  CONTRIBUTING.md  PLAN.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  pyproject.toml
.worktrees/agileplus-plugin-git-docs/: AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  SPEC.md  _typos.toml  clippy.toml  codecov.yml  gitleaks.toml
.worktrees/agileplus-plugin-sqlite-docs/: AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  SPEC.md  _typos.toml  clippy.toml  codecov.yml  gitleaks.toml
.worktrees/phenodocs-docs/: package.json  pyproject.toml
.worktrees/phenotype-cipher-docs/: .env.example  CODEOWNERS  Cargo.toml  Dockerfile  SECURITY.md  _typos.toml  clippy.toml  justfile  process-compose.yml
.worktrees/phenotype-dep-guard-docs/: .env.example  .gitignore  ADR.md  AGENTS.md  ARCHIVED.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SPEC.md  TEST_COVERAGE_MATRIX.md  justfile  process-compose.yml  pyproject.toml  requirements-audit.txt  requirements.txt  worklog.md
.worktrees/phenotype-forge-docs/: .env.example  ARCHIVED.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUNCTIONAL_REQUIREMENTS.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  _typos.toml  clippy.toml  deny.toml  justfile  nextest.toml  process-compose.yml  tarpaulin-report.json
.worktrees/phenotype-gauge-docs/: .gitignore  ADR.md  ARCHIVED.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  Taskfile.yml  USER_JOURNEYS.md  codecov.yml  gitleaks.toml  package.json
.worktrees/phenotype-middleware-py-docs/: .health-dashboard.yml  .pre-commit-config.yaml  ADR.md  AGENTS.md  ARCHIVED.md  CLAUDE.md  CONTRIBUTING.md  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  gitleaks.toml  package.json  pyproject.toml  requirements-audit.txt  ruff.toml
.worktrees/phenotype-nexus-docs/: .editorconfig  ADR.md  ARCHIVED.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  codecov.yml  gitleaks.toml
.worktrees/thegent-sharecli-docs/: .env.example  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  PLAN.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  codecov.yml  gitleaks.toml  pyproject.toml
Observably/: AGENTS.md  BRAND.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPRECATION.md  FUNCTIONAL_REQUIREMENTS.md  README.md  RELEASE.md  release-registry.toml
Observably/docs/: EXTRACTION_PLAN.md  getting-started.md
Observably/tests/: test_smoke.py
Stashly/: AGENTS.md  BRAND.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.toml.bak  README.md  RELEASE.md  deny.toml  release-registry.toml  sbom.cdx.json
Stashly/docs/: EXTRACTION_PLAN.md  FUNCTIONAL_REQUIREMENTS.md  getting-started.md
crates/phenotype-mcp-asset/: Cargo.toml
crates/phenotype-mcp-testing/: Cargo.toml
crates/phenotype-pidfd-tokio/: ATTRIBUTION.md  Cargo.toml  LICENSE  README.md
crates/phenotype-policy-engine-py/: Cargo.toml  DOCTESTS.md
eyetracker/: AGENTS.md  CLAUDE.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  README.md
(+23204 files in other folders)
