[workspace]
members = [
    "crates/observably-tracing",
    "crates/observably-logging",
    "crates/observably-sentinel",
  ]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["Phenotype"]
license = "Apache-2.0"
repository = "https://github.com/KooshaPari/phenotype-observability"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
