[workspace]
members = [
    "crates/stashly-cache",
    "crates/stashly-eventstore",
    "crates/stashly-statemachine",
    "crates/stashly-migrations",
  ]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["Phenotype"]
license = "Apache-2.0"
repository = "https://github.com/KooshaPari/phenotype-storage"

[workspace.dependencies]
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dashmap = "6.0"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
