[workspace]
members = [
    "crates/eyetracker-domain",
    "crates/eyetracker-math",
    "crates/eyetracker-calibration",
    "crates/eyetracker-estimator",
    "crates/eyetracker-storage",
    "crates/eyetracker-ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Team <kooshapari@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
nalgebra = "0.33"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
