[package]
name = "apikit"
version = "0.1.0"
edition = "2021"
description = "Universal API toolkit with REST, GraphQL, and WebSocket support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/apikit"

[lib]
name = "apikit"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.0", features = ["full"] }
http = "1.0"
tracing = "0.1"
log = "0.4"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }

[profile.release]
opt-level = 3
