[package]
name = "logkit"
version = "0.1.0"
edition = "2021"
description = "Zero-cost structured logging framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phenotype-dev/logify"
rust-version = "1.75"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async
async-trait = "0.1"

# Concurrency
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "perf"
harness = false
