[package]
name = "metrickit"
version = "0.1.0"
edition = "2021"
description = "Metrics collection with Prometheus support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phenotype-dev/metron"
rust-version = "1.75"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# HTTP (hyper 1.0 with util)
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"

# Async
tokio = { version = "1", features = ["full"] }

# Concurrency
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "perf"
harness = false
