[package]
name = "agileplus-plugin-git"
description = "Git adapter plugin for AgilePlus using git2"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Plugin system
agileplus-plugin-core = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Git operations
git2 = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
