[package]
name = "agileplus-plugin-sqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SQLite storage plugin for AgilePlus"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Async trait support
async-trait = { workspace = true }

# SQLite
rusqlite = { workspace = true, features = ["bundled"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# AgilePlus plugin core
agileplus-plugin-core = { path = "../agileplus-plugin-core" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
