[project]
name = "phenodocs"
version = "0.1.0"
description = "Phenotype Documentation CLI - Unified doc generation, traceability, and ecosystem management"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "watchdog>=3.0.0",
    "jinja2>=3.1.0",
    "markdown>=3.4.0",
    "mermaid-py>=0.5.0",
]

[project.scripts]
phenodocs = "phenodocs.cli:main"
pdocs = "phenodocs.cli:main"

[dependency-groups]
dev = ["pre-commit>=4.0.0", "pytest>=7.0.0", "pytest-cov>=4.0.0", "mypy>=1.0.0", "ruff>=0.1.0"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phenodocs = ["templates/*", "static/*", "config/*"]
