[package]
name = "cipher"
version = "0.1.0"
edition = "2021"
description = "Simple, safe cryptography: AES-GCM, ChaCha20-Poly1305, Ed25519, Blake2, SHA-2"
license = "MIT"
repository = "https://github.com/KooshaPari/cipher"

[dependencies]
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
blake2 = "0.10"
blake3 = "1"
hmac = "0.12"
ed25519-dalek = "2.0"
rand = "0.8"
thiserror = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto"
harness = false

[workspace]
