[project]
name = "phenotype-dep-guard"
version = "0.1.0"
description = "Malicious dependency analysis and supply chain security guard"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.0",
    "pydantic>=2.6.1",
    "python-dotenv>=1.0.1",
    "packageurl-python>=0.11.2",
    "toml>=0.10.2",
    "pyyaml>=6.0.1",
]

[project.scripts]
dep-guard = "phenotype_dep_guard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phenotype_dep_guard"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "RUF"]
ignore = ["RUF001", "RUF012", "SIM102", "SIM108", "UP042"]  # typing stubs, simplify, upgradables

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
