[package]
name = "phenotype-forge"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
notify = "6.0"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
serde_json = "1.0"

[[bin]]
name = "phenotype-forge"
path = "src/main.rs"
