[package]
name = "gauge"
version = "0.2.0"
edition = "2021"
description = "Modern benchmarking + xDD testing framework for Rust with statistical analysis"
license = "MIT"
repository = "https://github.com/KooshaPari/gauge"
readme = "README.md"

[workspace]

[dependencies]
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
tokio = { version = "1.0", features = ["full"] }
proptest = "1.0"
quickcheck = "1.0"

# Phenotype shared crates
phenotype-validation = { path = "../phenotype-infrakit/crates/phenotype-validation" }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
phenotype-bdd = { path = "../phenotype-infrakit/crates/phenotype-bdd" }

[[bench]]
name = "my_benchmark"
harness = false
