[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
description = "Service registry and discovery with hashconsign-based state management"
license = "MIT"
repository = "https://github.com/KooshaPari/nexus"

[workspace]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
dashmap = "5.0"
serde_json = "1.0"

# Phenotype shared crates
phenotype-validation = { path = "../phenotype-infrakit/crates/phenotype-validation" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
phenotype-bdd = { path = "../phenotype-infrakit/crates/phenotype-bdd" }

[[bench]]
name = "nexus"
harness = false
