[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thegent-sharecli"
version = "0.1.0"
description = "CLI share system - command deduplication, task queue, smart merge"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Koosha Pari", email = "kooshapari@kooshapari.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "watchfiles>=0.21.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/thegent_cli_share"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
