[package]
name = "phenotype-mcp-asset"
version = "0.2.0"
edition = "2021"
description = "MCP Asset handler for discovering, building, validating, and managing phenotype packs"
authors = ["Phenotype Developers <dev@phenotype.dev>"]
license = "MIT"
repository = "https://github.com/phenotype-org/phenotype"

[dependencies]
phenotype-mcp-framework = { path = "../phenotype-mcp-framework" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "process", "sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }
tempfile = { version = "3.0", optional = true }
toml = "0.8"
walkdir = "2.5"
semver = { version = "1.0", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
tempfile = "3.0"
serde_json = { workspace = true }

[features]
default = ["tempfile"]
