[package]
name = "phenotype-mcp-testing"
version = "0.2.0"
edition = "2021"
description = "MCP Testing framework for game process management and test execution"
authors = ["Phenotype Developers <dev@phenotype.dev>"]
license = "MIT"
repository = "https://github.com/phenotype-org/phenotype"

[dependencies]
phenotype-mcp-framework = { path = "../phenotype-mcp-framework" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "sync", "time", "fs", "io-util"] }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tempfile = { version = "3.0", optional = true }
nix = { version = "0.28", features = ["signal", "process"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
tempfile = "3.0"
serde_json = { workspace = true }

[features]
default = ["tempfile"]
unix = ["nix"]
