[package]
name = "phenotype-pidfd-tokio"
description = "Tokio-integrated Linux pidfd process reaper (vendored from orbstack/pidfd-rs)."
version.workspace = true
edition.workspace = true
license = "MIT"
repository.workspace = true

[dependencies]
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }
futures = "0.3"
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
