[package]
name = "stashly-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Phenotype shared crate"

[dependencies]
phenotype-bus = { path = "../../../phenotype-bus" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
