[package]
name = "stashly-migrations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
phenotype-bus = { path = "../../../phenotype-bus" }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
