[package]
name = "eyetracker-calibration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
nalgebra.workspace = true
thiserror.workspace = true
eyetracker-domain = { path = "../eyetracker-domain" }
eyetracker-math = { path = "../eyetracker-math" }
